--- a/templates/journal.html
+++ b/templates/journal.html
@@ -1,9 +1,11 @@
 {% extends "layout.html" %} {% block title %}Journal{% endblock %} {% block body
 %}
 <div class="container pt-4 pb-2">
-  <div class="d-flex justify-content-between align-items-center mb-4">
+  <div class="d-flex align-items-center mb-4" style="margin-left: 41%">
     <h1 class="mb-0">Journal</h1>
-    <a href="/journal/new" class="btn btn-primary">New Entry</a>
+    <a href="/journal/new" class="btn btn-primary" style="margin-left: 60%"
+      >New Entry</a
+    >
   </div>
 
   <div class="journal-feed">
