--- a/templates/journal_write.html
+++ b/templates/journal_write.html
@@ -20,10 +20,13 @@
           value="{{ mood }}"
           readonly
           style="
-            background-color: #e8f4f8;
-            border: 1px solid #b3d9e8;
+            background-color: transparent;
+            border: none;
+            border-bottom: 1px solid #ccc;
             font-weight: 600;
             color: #001f54;
+            padding-left: 0;
+            box-shadow: none;
           "
         />
       </div>
@@ -37,10 +40,13 @@
           readonly
           rows="3"
           style="
-            background-color: #e8f4f8;
-            border: 1px solid #b3d9e8;
+            background-color: transparent;
+            border: none;
+            border-bottom: 1px solid #ccc;
             font-style: italic;
             resize: none;
+            padding-left: 0;
+            box-shadow: none;
           "
         >
 {{ prompt }}</textarea
